<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorTab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:expandedTitleMarginStart="30dp"
            app:expandedTitleMarginBottom="28dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="?attr/colorTab">

            <ImageView
                android:id="@+id/imgBackdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_backdrop"/>


            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shimmer_auto_start="true">

                <include layout="@layout/shimmer_image_backdrop" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:navigationIconTint="@color/white"
                app:title="@string/detail_film"
                app:titleTextColor="@color/white"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_top_appbar"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/viewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="50dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="200dp"
                        android:layout_height="290dp"
                        app:cardCornerRadius="15dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/appBar"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/imgMovie"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/poster_image"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"/>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvDurasi"
                            style="@style/textDetail"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="20dp"
                            android:drawablePadding="5dp"
                            app:drawableLeftCompat="@drawable/ic_baseline_access_time_24"/>

                        <TextView
                            android:id="@+id/tvScore"
                            style="@style/textDetail"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="5dp"
                            app:drawableLeftCompat="@drawable/ic_baseline_star_rate_24"/>

                        <TextView
                            android:id="@+id/tvRilis"
                            style="@style/textDetail"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="5dp"
                            app:drawableLeftCompat="@drawable/ic_baseline_date_range_24"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvJudul"
                    style="@style/textDetail"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="@id/cardView"
                    app:layout_constraintTop_toBottomOf="@id/cardView" />

                <TextView
                    android:id="@+id/overview"
                    style="@style/textDetail"
                    android:text="@string/overview"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@id/tvJudul"
                    app:layout_constraintTop_toBottomOf="@id/tvJudul" />

                <TextView
                    android:id="@+id/tvoverview"
                    style="@style/textDetail"
                    android:textStyle="normal"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="@id/tvJudul"
                    app:layout_constraintTop_toBottomOf="@id/overview" />

            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shimmer_auto_start="true">

                <include layout="@layout/shimmer_detail" />
            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>