<resources>
    <string name="app_name">Film Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="catalogue">Catalogue</string>
    <string name="judul_film">Judul film</string>
    <string name="poster_image">Poster Image</string>
    <string name="text_genre">Action, Advanture, Fiction, comedy, family</string>
    <string name="text_date">01/01/2021</string>
    <string name="text_rating">9.5</string>
    <string name="movies">MOVIES</string>
    <string name="tv_show">TV SHOW</string>
    <string name="duration">Duration</string>
    <string name="score">Score</string>
    <string name="detail_film">Detail Film</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
    <string name="eps"> episode</string>
    <string name="netflim">NETFLIM</string>
    <string name="logo_splash">logo splash</string>
    <string name="image_backdrop">Image Backdrop</string>
    <string name="fav_icon">fav icon</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>